--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -5,7 +5,7 @@
         routerLink="/"
         routerLinkActive="text-accent"
         [routerLinkActiveOptions]="{ exact: true }"
-        class="flex items-center gap-3 max-h-16 border-r-white border-r-white border-r-2 pr-6"
+        class="flex items-center gap-3 max-h-16 border-r-white border-r-2 pr-6"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -39,7 +39,7 @@
           role="button"
           class="flex items-center text-white text-xl gap-3 cursor-pointer"
         >
-          <img src="/user.png" alt="user avatar" class="w-8 h-8 rounded-full" />
+          <img [src]="user?.imageUrl || '/user.png' " alt="user avatar" class="w-8 h-8 rounded-full" />
           <span>{{ user.displayName }}</span>
         </div>
         <ul
